# mock-software-company

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
company/company/: settings.py
company/email_notifier/: apps.py  tasks.py
company/email_notifier/templates/templated_email/: notify_seller.email
company/sales/: admin.py  models.py  signals.py
company/sales/migrations/: 0001_initial.py  0002_auto_20210205_2017.py  0003_auto_20210205_2033.py  0004_auto_20210206_1342.py
