[tool.poetry]
name = "mock-software-company"
version = "0.1.0"
description = "A web site for a non existent software company"
authors = ["joelschutz <joeymarley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
django-rest-framework = "^0.1.0"
drf-yasg = "^1.20.0"
django-q = "^1.3.4"
pylint = "^2.6.0"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
